--- a/src/components/Bar/Bar.module.css
+++ b/src/components/Bar/Bar.module.css
@@ -1,10 +1,40 @@
-.bar {
-  background-color: var(--fds-semantic-text-neutral-default);
-  color: white;
-  height: 60px;
+.toggle {
+  position: fixed;
+  top: 22px;
+  right: 22px;
+  z-index: 1;
+  height: 44px;
+  width: 44px;
+  border-radius: 50%;
+  border: none;
+  background-color: var(--fds-semantic-background-subtle);
+  color: inherit;
+  box-shadow: var(--fds-shadow-large);
+}
+
+.back {
+  color: inherit;
+  text-decoration: none;
   display: flex;
-  align-items: center;
-  font-size: 15px;
+  margin-top: 8px;
+}
+
+.back svg {
+  margin-left: -7px;
+  margin-right: 3px;
+}
+
+.pane .slide-pane__content {
+  padding: 32px !important;
+}
+
+.slide-pane__content {
+  padding: 32px !important;
+}
+
+.pane h1 {
+  margin-top: 20px;
+  margin-bottom: 32px;
 }
 
 .container {
@@ -21,9 +51,12 @@
   border-radius: 100px;
   border: none;
   height: 34px;
-  padding: 0 15px;
+  padding: 0;
   background-color: transparent;
-  color: rgb(216, 216, 216);
+  color: rgb(192, 192, 192);
+  display: flex;
+  align-items: center;
+  text-decoration: none;
 }
 
 .btn:hover {
@@ -31,8 +64,10 @@
 }
 
 .active {
-  background-color: #3c4b60;
-  color: white;
+  text-decoration: underline;
+  text-underline-offset: 6px;
+  text-decoration-thickness: 2px;
+  color: rgb(224, 224, 224);
 }
 
 .group {
@@ -44,7 +79,7 @@
 .items {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 16px;
 }
 
 .home {
