--- a/src/components/Toolbar/Toolbar.module.css
+++ b/src/components/Toolbar/Toolbar.module.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 98%;
+  width: 100%;
 }
 
 .left {
@@ -39,6 +39,7 @@
   align-items: center;
   border: none;
   gap: 10px;
+  background-color: transparent;
 }
 
 .avatar {
