--- a/src/components/Configurator/Configurator.module.css
+++ b/src/components/Configurator/Configurator.module.css
@@ -1,34 +1,7 @@
-.contentPadding {
-  width: calc(100vw - 400px) !important;
-}
-
-.content {
-  transition: 0.6s all;
-  position: relative;
-  width: 100%;
-}
-
-.pane {
-  position: fixed;
-  top: 0;
-  right: -400px;
-  bottom: 0;
-  width: 400px;
-  background-color: white;
-  z-index: 5;
-  padding: 32px;
-  box-shadow: var(--fds-shadow-small);
-  transition: 0.6s all;
-}
-
-.paneOpen {
-  right: 0;
-}
-
 .toggle {
   position: fixed;
-  top: 24px;
-  right: 24px;
+  top: 22px;
+  right: 22px;
   z-index: 10;
   height: 44px;
   width: 44px;
@@ -43,7 +16,6 @@
   color: inherit;
   text-decoration: none;
   display: flex;
-  margin-top: 8px;
 }
 
 .back svg {
@@ -52,7 +24,7 @@
 }
 
 .pane h1 {
-  margin-top: 20px;
+  margin-top: 24px;
   margin-bottom: 32px;
 }
 
@@ -110,8 +82,8 @@
 .label {
   font-weight: 500;
   font-size: 18px;
-  margin-top: 24px;
-  margin-bottom: 10px;
+  margin-top: 32px;
+  margin-bottom: 16px;
 }
 
 .colors {
@@ -185,20 +157,14 @@
   justify-content: center;
 }
 
-.mobile {
-  width: 360px !important;
-  height: 720px !important;
-  border-radius: 16px;
-  overflow: hidden;
-  border: 8px solid rgb(99, 99, 99);
-  position: relative;
+.activeDevice {
+  border: 2px solid rgb(32, 63, 204);
 }
 
-.tablet {
-  width: 820px !important;
-  height: 1180px !important;
-  border-radius: 16px;
-  overflow: hidden;
-  border: 8px solid rgb(99, 99, 99);
-  position: relative;
+.activeDevice svg {
+  color: rgb(32, 63, 204) !important;
+}
+
+.sliderContainer {
+  padding: 0 10px;
 }
