--- a/src/components/Configurator/Configurator.module.css
+++ b/src/components/Configurator/Configurator.module.css
@@ -168,17 +168,23 @@
 
 .deviceBtn {
   border: none;
-  background-color: rgb(233, 233, 233);
-  height: 42px;
-  width: 42px;
+  background-color: white;
+  height: 44px;
+  width: 44px;
   border-radius: 50%;
   margin-right: 16px;
   display: flex;
   align-items: center;
   justify-content: center;
+  border: 1px solid rgb(180, 180, 180);
 }
 
-.activeDevice {
+.deviceBtn:hover {
+  border-color: black;
+}
+
+.activeDevice,
+.activeDevice:hover {
   border: 2px solid rgb(32, 63, 204);
 }
 
