--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -152,3 +152,13 @@ body.theme-altinn {
   --fds-brand-alt3-800: #5a121d;
   --fds-brand-alt3-900: #480e17;
 }
+
+body.focus-gul {
+  --fds-semantic-border-focus-boxshadow: var(
+    --fds-colors-yellow-500
+  ) !important;
+}
+
+body.focus-transparent {
+  --fds-semantic-border-focus-boxshadow: transparent !important;
+}
