--- a/src/components/Configurator/Configurator.module.css
+++ b/src/components/Configurator/Configurator.module.css
@@ -97,17 +97,22 @@
   margin-bottom: 12px;
 }
 
-.colors {
+.colorPicker {
   display: inline-flex;
-  align-items: center;
-  gap: 16px;
+  flex-direction: column;
+  gap: 14px;
   border: 2px solid rgb(207, 207, 207);
   padding: 20px;
   border-radius: 8px;
 }
 
-.colors:hover {
+.colorPicker:hover {
   cursor: pointer;
+}
+
+.colors {
+  display: flex;
+  gap: 16px;
 }
 
 .color {
