--- a/src/components/Configurator/Configurator.module.css
+++ b/src/components/Configurator/Configurator.module.css
@@ -99,8 +99,9 @@
 
 .colorPicker {
   display: inline-flex;
-  flex-direction: column;
-  gap: 14px;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
   border: 2px solid rgb(207, 207, 207);
   padding: 20px;
   border-radius: 8px;
