--- a/src/pages/website/index.module.css
+++ b/src/pages/website/index.module.css
@@ -1,35 +1,35 @@
 .banner {
   background-color: var(--fds-brand-alt3-300);
-  padding: 72px 0;
+  padding: 76px 0;
 }
 
-.banner svg {
-  width: 60%;
+.bannerLeft svg {
+  width: 55%;
   height: auto;
 }
 
-.banner svg path:nth-child(1),
-.banner svg path:nth-child(2),
-.banner svg path:nth-child(3) {
+.bannerLeft svg path:nth-child(1),
+.bannerLeft svg path:nth-child(2),
+.bannerLeft svg path:nth-child(3) {
   fill: var(--fds-brand-alt3-600);
 }
 
-.banner svg path:nth-child(4),
-.banner svg path:nth-child(6),
-.banner svg path:nth-child(7),
-.banner svg path:nth-child(8),
-.banner svg path:nth-child(25),
-.banner svg path:nth-child(24),
-.banner svg path:nth-child(27) {
+.bannerLeft svg path:nth-child(4),
+.bannerLeft svg path:nth-child(6),
+.bannerLeft svg path:nth-child(7),
+.bannerLeft svg path:nth-child(8),
+.bannerLeft svg path:nth-child(25),
+.bannerLeft svg path:nth-child(24),
+.bannerLeft svg path:nth-child(27) {
   fill: var(--fds-brand-alt2-600);
 }
 
-.banner svg path:nth-child(8),
-.banner svg path:nth-child(9),
-.banner svg path:nth-child(10),
-.banner svg path:nth-child(22),
-.banner svg path:nth-child(23),
-.banner svg path:nth-child(28) {
+.bannerLeft svg path:nth-child(8),
+.bannerLeft svg path:nth-child(9),
+.bannerLeft svg path:nth-child(10),
+.bannerLeft svg path:nth-child(22),
+.bannerLeft svg path:nth-child(23),
+.bannerLeft svg path:nth-child(28) {
   fill: var(--fds-brand-alt1-600);
 }
 
@@ -65,4 +65,8 @@
 .cardsHeading {
   text-align: center;
   margin-bottom: 32px !important;
+}
+
+.bannerLink {
+  color: inherit !important;
 }
