--- a/src/components/Configurator/Configurator.module.css
+++ b/src/components/Configurator/Configurator.module.css
@@ -1,4 +1,5 @@
-.configurator h1[class^="fds-heading"] {
+.configurator h1[class^="fds-heading"],
+.configurator h2[class^="fds-heading"] {
   color: inherit !important;
 }
 
@@ -28,8 +29,8 @@
 }
 
 .pane h1 {
-  margin-top: 24px;
-  margin-bottom: 32px;
+  margin-top: 32px;
+  margin-bottom: 14px;
 }
 
 .container {
@@ -91,14 +92,14 @@
 }
 
 .colorsContainer {
-  display: inline-flex;
+  display: flex;
   flex-direction: column;
-  gap: 24px;
-  margin-bottom: 12px;
+  gap: 22px;
+  margin-bottom: 10px;
 }
 
 .colorPicker {
-  display: inline-flex;
+  display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 20px;
@@ -151,7 +152,7 @@
   background-color: #5ca28f;
 }
 .theme2 .color:nth-child(4) {
-  background-color: #0062ba;
+  background-color: #2e3d50;
 }
 
 .theme3 .color:nth-child(1) {
@@ -191,11 +192,11 @@
 
 .activeDevice,
 .activeDevice:hover {
-  border: 2px solid rgb(32, 63, 204);
+  border: 2px solid #0062ba;
 }
 
 .activeDevice svg {
-  color: rgb(32, 63, 204) !important;
+  color: #0062ba !important;
 }
 
 .sliderContainer {
